<templates/front/account> : Adds {csrf} input.

--- a/templates/front/account/changepwd.html.twig
+++ b/templates/front/account/changepwd.html.twig
@@ -14,4 +14,7 @@
             </button>
         {{ form_end(form) }}
     </div>
+    <input type="hidden" name="_csrf_token"
+           value="{{ csrf_token('authenticate_') }}"
+    >
 {% endblock %}
